--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&display=swap");
+
 body {
-	@apply bg-bg-color text-base
+	@apply bg-bg-color text-base text-black;
+	font-family: "Golos Text", sans-serif;
 }
 
 .disabled {
@@ -12,3 +15,4 @@ body {
 	cursor: default;
 	opacity: 0.2 !important;
 }
+
