--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -16,3 +16,13 @@ body {
 	opacity: 0.2 !important;
 }
 
+.open-menu {
+	opacity: 1;
+	transform: scale(1);
+}
+
+.close-menu {
+	opacity: 0;
+	transform: scale(0.8);
+	display: none;
+}
